Finished making changes to the site, fixed the alignment of the bottom of the page, and adujusted the size of the logo in the footer will add the social links tomorrow

--- a/main.css
+++ b/main.css
@@ -1415,11 +1415,11 @@ button.button {
 
 .feature__title {
   margin-top: 0;
-  margin-bottom: 15px; }
+   }
 
 .feature__title_text {
   text-transform: uppercase;
-  font-size: 12px; }
+  font-size: 18px; }
 
 .feature__content {
   margin: auto; }
@@ -8906,7 +8906,7 @@ button.button {
       margin-bottom: 40px; } }
 
 .footer-01__logo {
-  max-height: 30px;
+  max-height: 40%;
   max-width: 100px; }
 
 .footer-01__list {
@@ -10311,7 +10311,9 @@ button.button {
     text-decoration: underline; }
 
 .features-01 {
-  padding: 70px 0 40px; }
+  padding: 70px;
+  text-align: center;
+}
 
 .features-01__title_box {
   text-align: center; }
@@ -10319,10 +10321,11 @@ button.button {
 .features-01__items {
   padding: 0;
   margin: 0;
+  font-size: 80px;
   list-style: none;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  justify-content:center;
+  align-items: center;
   flex-wrap: wrap;
   margin-top: 60px; }
   @media (max-width: 990px) {
@@ -10332,8 +10335,8 @@ button.button {
 .features-01__item {
   width: 30%;
   max-width: 350px;
-  margin-bottom: 60px;
-  padding-right: 30px; }
+  /* margin-bottom: 60px;
+padding-right: 30px;*/ }
   @media (max-width: 990px) {
     .features-01__item {
       width: 50%; } }
@@ -10354,7 +10357,7 @@ button.button {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap; }
   @media (max-width: 900px) {
     .features-02__items {
